--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Image Generation</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/images/logo.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>AI Art</title>
+		<meta property="og:url" content="https://ai-art-reactjs.vercel.app" />
+		<meta property="og:title" content="AI Art" />
+		<meta
+			property="og:description"
+			content="Generate stunning art from your creative thinking!"
+		/>
+		<meta
+			property="og:image"
+			content="https://ai-art-reactjs.vercel.app/images/dummy-image.jpg"
+		/>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
